--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- Auth0 Styleguid -->
   <link rel="stylesheet" href="https://cdn.auth0.com/styleguide/react-components/1.0.2/react-components.css" />
   <link rel="stylesheet" href="https://cdn.auth0.com/styleguide/core/2.0.5/core.min.css" />
-  <link rel="stylesheet" href="https://cdn.auth0.com/styleguide/components/2.0.0/components.min.css" />
+  <link rel="stylesheet"
+  href="https://cdn.auth0.com/styleguide/components/2.0.0/components.min.css" />
+
+  <!-- Lock Widget -->
+  <script src="https://cdn.auth0.com/js/lock/11.6.1/lock.min.js"></script>
+
   <title>Basic Frontend</title>
 </head>
 <body>
